website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.4.0/api/docusaurus.config.js.mdx
---
sidebar_position: 0
description: API reference for Docusaurus configuration file.
slug: /api/docusaurus-config
---

# `docusaurus.config.js`

import APITable from '@site/src/components/APITable';

:::info

参考入门指南中的[**配置示例**](../configuration.mdx)。

:::

## 概述 {#overview}

`docusaurus.config.js` 包含您站点的配置信息，通常放置在站点的根目录下。

:::note

对于使用 [TypeScript](../typescript-support.mdx) 的 Docusaurus 项目，配置文件可能命名为 `docusaurus.config.ts`。其语法与 JavaScript 配置文件基本相同，但增加了类型定义。您可以在 [Docusaurus 官方网站](https://github.com/facebook/docusaurus/blob/main/website/docusaurus.config.ts) 查看示例。

:::

该文件在 Node.js 环境中运行，应导出一个站点配置对象或生成该对象的函数。

`docusaurus.config.js` 文件支持：

- [**ES 模块**](https://flaviocopes.com/es-modules/)
- [**CommonJS**](https://flaviocopes.com/commonjs/)
- [**TypeScript**](../typescript-support.mdx#typing-config)

示例：

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
  url: 'https://docusaurus.io',
  // your site config ...
};
```

```js title="docusaurus.config.js"
export default async function createConfigAsync() {
  return {
    title: 'Docusaurus',
    url: 'https://docusaurus.io',
    // your site config ...
  };
}
```

:::tip

更多详尽示例和说明，请参考 [**`docusaurus.config.js` 声明语法**](../configuration.mdx#syntax-to-declare-docusaurus-config)。

:::

## 必填字段 {#required-fields}

### `title` {#title}

- 类型：`string`

站点的标题。将用于元数据和浏览器标签页标题。

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
};
```

### `url` {#url}

- 类型：`string`

站点的 URL。可视为顶级域名。例如，`https://facebook.github.io` 是 https://facebook.github.io/metro/ 的 URL，而 `https://docusaurus.io` 是 https://docusaurus.io 的 URL。该字段与 [`baseUrl`](#baseUrl) 字段相关。

```js title="docusaurus.config.js"
export default {
  url: 'https://docusaurus.io',
};
```

### `baseUrl` {#baseUrl}

- 类型：`string`

站点的基础 URL。可视为主机名后的路径。例如，`/metro/` 是 https://facebook.github.io/metro/ 的基础 URL。对于没有路径的 URL，`baseUrl` 应设置为 `/`。该字段与 [`url`](#url) 字段相关。始终包含前导和尾随斜杠。

```js title="docusaurus.config.js"
export default {
  baseUrl: '/',
};
```

## 可选字段 {#optional-fields}

### `favicon` {#favicon}

- 类型：`string | undefined`

站点图标的路径；必须是一个可用于链接 href 的 URL。例如，如果您的图标位于 `static/img/favicon.ico`：

```js title="docusaurus.config.js"
export default {
  favicon: '/img/favicon.ico',
};
```

### `trailingSlash` {#trailingSlash}

- 类型：`boolean | undefined`

用于自定义 URL/链接末尾是否包含尾随斜杠，以及静态 HTML 文件的生成方式：

- `undefined`（默认）：保持 URL 不变，并为 `/docs/myDoc.md` 生成 `/docs/myDoc/index.html`
- `true`：在 URL/链接中添加尾随斜杠，并为 `/docs/myDoc.md` 生成 `/docs/myDoc/index.html`
- `false`：从 URL/链接中移除尾随斜杠，并为 `/docs/myDoc.md` 生成 `/docs/myDoc.html`

:::tip

每个静态托管服务提供商对静态文件的处理方式各不相同（这种行为甚至可能随时间变化）。

请参考[部署指南](../deployment.mdx)和[slorber/trailing-slash-guide](https://github.com/slorber/trailing-slash-guide)来选择适当的配置。

:::

### `i18n` {#i18n}

- 类型: `Object`

用于[站点本地化](../i18n/i18n-introduction.mdx)的国际化配置对象。

示例:

```js title="docusaurus.config.js"
export default {
  i18n: {
    defaultLocale: 'en',
    locales: ['en', 'fa'],
    path: 'i18n',
    localeConfigs: {
      en: {
        label: 'English',
        direction: 'ltr',
        htmlLang: 'en-US',
        calendar: 'gregory',
        path: 'en',
      },
      fa: {
        label: 'فارسی',
        direction: 'rtl',
        htmlLang: 'fa-IR',
        calendar: 'persian',
        path: 'fa',
      },
    },
  },
};
```

- `defaultLocale`: 该语言环境会 (1) 在基础URL中不显示其名称 (2) 运行`docusaurus start`时不带`--locale`参数时默认使用 (3) 用于`<link hrefLang="x-default">`标签
- `locales`: 站点部署的所有语言环境列表。必须包含`defaultLocale`
- `path`: 所有语言环境文件夹的相对根目录。可以是绝对路径或相对于配置文件的路径。默认为`i18n`
- `localeConfigs`: 每个语言环境的独立配置
  - `label`: 在语言切换下拉菜单中显示的标签
  - `direction`: `ltr`（默认）或`rtl`（适用于[从右至左语言](https://developer.mozilla.org/en-US/docs/Glossary/rtl)如波斯语、阿拉伯语、希伯来语等）。用于选择该语言环境的CSS和HTML元属性
  - `htmlLang`: 用于`<html lang="...">`（或其他DOM标签）和`<link ... hreflang="...">`的BCP 47语言标签
  - `calendar`: 用于计算日期纪元的[日历类型](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Locale/calendar)。注意这不控制实际显示格式：`MM/DD/YYYY`和`DD/MM/YYYY`都属于`gregory`日历。要选择格式需设置语言环境名称为`en-GB`或`en-US`（`en`表示`en-US`）
  - `path`: 该语言环境所有插件本地化文件夹的相对根目录。将相对于`i18n.path`解析。默认为语言环境名称。注意：这不会影响语言环境的`baseUrl`——自定义基础URL功能正在开发中

### `future` {#future}

- 类型: `Object`

`future`配置对象允许您选择启用尚未成熟/不稳定/实验性的Docusaurus功能。

这也是为下一个主要版本中的重大变更做准备的方式，让您可以在当前版本中提前适配。这个理念在[Remix未来标志博客文章](https://remix.run/blog/future-flags)中有详细解释。

:::danger[次要版本中的破坏性变更]

带有`experimental_`或`unstable_`前缀的功能可能在**次要版本**中发生变化，不被视为[语义化版本控制的破坏性变更](/community/release-process)。

带有`v<主版本号>_`前缀的功能（如`v6_`、`v7_`等）是预期在下一个主版本中默认启用的未来标志。这些功能较不容易变更，但我们保留变更的权利。

`future`API的破坏性变更应该易于处理，并会在次要/主要版本的博客文章中说明。

:::

示例:

```js title="docusaurus.config.js"
export default {
  future: {
    experimental_storage: {
      type: 'localStorage',
      namespace: true,
    },
    experimental_router: 'hash',
  },
};
```

- `experimental_storage`: 站点级的浏览器存储选项，主题作者应尽量遵循。
  - `type`: 主题作者应使用的浏览器存储类型。可选值为 `localStorage` 和 `sessionStorage`。默认为 `localStorage`。
  - `namespace`: 是否对浏览器存储键进行命名空间隔离，以避免当多个 Docusaurus 站点托管在相同域名或本地主机时发生存储键冲突。可选值为 `string | boolean`。命名空间会附加在存储键的末尾 `key-namespace`。使用 `true` 会根据站点 `url + baseUrl` 自动生成随机命名空间。默认为 `false`（无命名空间，历史行为）。
- `experimental_router`: 使用的路由类型。可选值为 `browser` 和 `hash`。默认为 `browser`。`hash` 路由仅适用于特殊情况，例如希望完全退出静态站点生成，拥有一个纯客户端应用且仅包含单个 `index.html` 入口文件的情况。这对于将 Docusaurus 站点打包为 `.zip` 归档文件后[无需运行 Web 服务器即可本地浏览](https://github.com/facebook/docusaurus/issues/3825)的场景非常有用。

### `noIndex` {#noIndex}

- 类型: `boolean`

此选项会在每个页面添加 `<meta name="robots" content="noindex, nofollow">` 标签，告知搜索引擎不要索引您的站点（更多信息参见[此处](https://moz.com/learn/seo/robots-meta-directives)）。

示例:

```js title="docusaurus.config.js"
export default {
  noIndex: true, // Defaults to `false`
};
```

### `onBrokenLinks` {#onBrokenLinks}

- 类型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus 检测到失效链接时的处理行为。

默认情况下会抛出错误，以确保您不会发布任何失效链接。

:::note

失效链接检测仅在生产环境构建 (`docusaurus build`) 时可用。

:::

### `onBrokenAnchors` {#onBrokenAnchors}

- 类型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus 检测到使用 Docusaurus 的 `Heading` 组件声明的失效锚点时的处理行为。

默认情况下会打印警告，以便您了解失效的锚点。

### `onBrokenMarkdownLinks` {#onBrokenMarkdownLinks}

- 类型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus 检测到失效的 Markdown 链接时的处理行为。

默认情况下会打印警告，以便您了解失效的 Markdown 链接。

### `onDuplicateRoutes` {#onDuplicateRoutes}

- 类型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus 检测到[重复路由](/guides/creating-pages.mdx#duplicate-routes)时的处理行为。

默认情况下会在运行 `yarn start` 或 `yarn build` 后显示警告。

### `tagline` {#tagline}

- 类型: `string`

您网站的标语。

```js title="docusaurus.config.js"
export default {
  tagline:
    'Docusaurus makes it easy to maintain Open Source documentation websites.',
};
```

### `organizationName` {#organizationName}

- 类型: `string`

拥有该仓库的 GitHub 用户或组织。如果不使用 `docusaurus deploy` 命令则无需此配置。

```js title="docusaurus.config.js"
export default {
  // Docusaurus' organization is facebook
  organizationName: 'facebook',
};
```

### `projectName` {#projectName}

- 类型: `string`

GitHub仓库的名称。如果不使用`docusaurus deploy`命令，则无需配置此项。

```js title="docusaurus.config.js"
export default {
  projectName: 'docusaurus',
};
```

### `deploymentBranch` {#deploymentBranch}

- 类型: `string`

部署静态文件的目标分支名称。如果不使用`docusaurus deploy`命令，则无需配置此项。

```js title="docusaurus.config.js"
export default {
  deploymentBranch: 'gh-pages',
};
```

### `githubHost` {#githubHost}

- 类型: `string`

服务器主机名。适用于GitHub Enterprise用户。如果不使用`docusaurus deploy`命令，则无需配置此项。

```js title="docusaurus.config.js"
export default {
  githubHost: 'github.com',
};
```

### `githubPort` {#githubPort}

- 类型: `string`

服务器端口号。适用于GitHub Enterprise用户。如果不使用`docusaurus deploy`命令，则无需配置此项。

```js title="docusaurus.config.js"
export default {
  githubPort: '22',
};
```

### `themeConfig` {#themeConfig}

- 类型: `Object`

用于自定义站点UI（如导航栏和页脚）的[主题配置](./themes/theme-configuration.mdx)对象。

示例:

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    docs: {
      sidebar: {
        hideable: false,
        autoCollapseCategories: false,
      },
    },
    colorMode: {
      defaultMode: 'light',
      disableSwitch: false,
      respectPrefersColorScheme: true,
    },
    navbar: {
      title: 'Site Title',
      logo: {
        alt: 'Site Logo',
        src: 'img/logo.svg',
        width: 32,
        height: 32,
      },
      items: [
        {
          to: 'docs/docusaurus.config.js',
          activeBasePath: 'docs',
          label: 'docusaurus.config.js',
          position: 'left',
        },
        // ... other links
      ],
    },
    footer: {
      style: 'dark',
      links: [
        {
          title: 'Docs',
          items: [
            {
              label: 'Docs',
              to: 'docs/doc1',
            },
          ],
        },
        // ... other links
      ],
      logo: {
        alt: 'Meta Open Source Logo',
        src: 'img/meta_oss_logo.png',
        href: 'https://opensource.fb.com',
        width: 160,
        height: 51,
      },
      copyright: `Copyright © ${new Date().getFullYear()} Facebook, Inc.`, // You can also put own HTML here
    },
  },
};
```

### `plugins` {#plugins}

- 类型: `PluginConfig[]`

```ts
type PluginConfig = string | [string, any] | PluginModule | [PluginModule, any];
```

参见[插件方法参考](./plugin-methods/README.mdx)了解`PluginModule`的结构定义。

```js title="docusaurus.config.js"
export default {
  plugins: [
    'docusaurus-plugin-awesome',
    ['docusuarus-plugin-confetti', {fancy: false}],
    () => ({
      postBuild() {
        console.log('Build finished');
      },
    }),
  ],
};
```

### `themes` {#themes}

- 类型: `PluginConfig[]`

```js title="docusaurus.config.js"
export default {
  themes: ['@docusaurus/theme-classic'],
};
```

### `presets` {#presets}

- 类型: `PresetConfig[]`

```ts
type PresetConfig = string | [string, any];
```

```js title="docusaurus.config.js"
export default {
  presets: [],
};
```

### `markdown` {#markdown}

Docusaurus全局Markdown配置。

- 类型: `MarkdownConfig`

```ts
type MarkdownPreprocessor = (args: {
  filePath: string;
  fileContent: string;
}) => string;

type MDX1CompatOptions =
  | boolean
  | {
      comments: boolean;
      admonitions: boolean;
      headingIds: boolean;
    };

export type ParseFrontMatter = (params: {
  filePath: string;
  fileContent: string;
  defaultParseFrontMatter: ParseFrontMatter;
}) => Promise<{
  frontMatter: {[key: string]: unknown};
  content: string;
}>;

type MarkdownAnchorsConfig = {
  maintainCase: boolean;
};

type MarkdownConfig = {
  format: 'mdx' | 'md' | 'detect';
  mermaid: boolean;
  preprocessor?: MarkdownPreprocessor;
  parseFrontMatter?: ParseFrontMatter;
  mdx1Compat: MDX1CompatOptions;
  remarkRehypeOptions: object; // see https://github.com/remarkjs/remark-rehype#options
  anchors: MarkdownAnchorsConfig;
};
```

示例:

```js title="docusaurus.config.js"
export default {
  markdown: {
    format: 'mdx',
    mermaid: true,
    preprocessor: ({filePath, fileContent}) => {
      return fileContent.replaceAll('{{MY_VAR}}', 'MY_VALUE');
    },
    parseFrontMatter: async (params) => {
      const result = await params.defaultParseFrontMatter(params);
      result.frontMatter.description =
        result.frontMatter.description?.replaceAll('{{MY_VAR}}', 'MY_VALUE');
      return result;
    },
    mdx1Compat: {
      comments: true,
      admonitions: true,
      headingIds: true,
    },
    anchors: {
      maintainCase: true,
    },
  },
};
```

<APITable>

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `format` | `'mdx' \| 'md' \| 'detect'` | `'mdx'` | The default parser format to use for Markdown content. Using 'detect' will select the appropriate format automatically based on file extensions: `.md` vs `.mdx`. |
| `mermaid` | `boolean` | `false` | When `true`, allows Docusaurus to render Markdown code blocks with `mermaid` language as Mermaid diagrams. |
| `preprocessor` | `MarkdownPreprocessor` | `undefined` | Gives you the ability to alter the Markdown content string before parsing. Use it as a last-resort escape hatch or workaround: it is almost always better to implement a Remark/Rehype plugin. |
| `parseFrontMatter` | `ParseFrontMatter` | `undefined` | Gives you the ability to provide your own front matter parser, or to enhance the default parser. Read our [front matter guide](../guides/markdown-features/markdown-features-intro.mdx#front-matter) for details. |
| `mdx1Compat` | `MDX1CompatOptions` | `{comments: true, admonitions: true, headingIds: true}` | Compatibility options to make it easier to upgrade to Docusaurus v3+. |
| `anchors` | `MarkdownAnchorsConfig` | `{maintainCase: false}` | Options to control the behavior of anchors generated from Markdown headings |
| `remarkRehypeOptions` | `object` | `undefined` | Makes it possible to pass custom [`remark-rehype` options](https://github.com/remarkjs/remark-rehype#options). |

</APITable>

### `customFields` {#customFields}

Docusaurus会阻止`docusaurus.config.js`中出现未知字段。如需添加自定义字段，需在`customFields`中定义。

- 类型: `Object`

```js title="docusaurus.config.js"
export default {
  customFields: {
    admin: 'endi',
    superman: 'lol',
  },
};
```

尝试在配置中添加未知字段会导致构建时报错:

```bash
Error: The field(s) 'foo', 'bar' are not recognized in docusaurus.config.js
```

### `staticDirectories` {#staticDirectories}

路径数组（相对于站点目录或绝对路径）。这些路径下的文件将原样复制到构建输出目录。

- 类型: `string[]`

示例:

```js title="docusaurus.config.js"
export default {
  staticDirectories: ['static'],
};
```

### `headTags` {#headTags}

将插入HTML`<head>`的标签数组。值必须是包含两个属性的对象：`tagName`和`attributes`。`tagName`是决定创建标签类型的字符串（如`"link"`），`attributes`是属性-值的映射对象。

- 类型: `{ tagName: string; attributes: Object; }[]`

示例:

```js title="docusaurus.config.js"
export default {
  headTags: [
    {
      tagName: 'link',
      attributes: {
        rel: 'icon',
        href: '/img/docusaurus.png',
      },
    },
  ],
};
```

这将在生成的 HTML 中变为 `<link rel="icon" href="img/docusaurus.png" />`。

### `scripts` {#scripts}

需要加载的脚本数组。值可以是字符串或属性-值映射的普通对象。`<script>` 标签将被插入到 HTML `<head>` 中。如果使用普通对象，唯一必需的属性是 `src`，其他任何属性都是允许的（每个属性应为布尔值/字符串值）。

请注意此处添加的 `<script>` 会阻塞渲染，因此可能需要为对象添加 `async: true`/`defer: true`。

- 类型: `(string | Object)[]`

示例:

```js title="docusaurus.config.js"
export default {
  scripts: [
    // String format.
    'https://docusaurus.io/script.js',
    // Object format.
    {
      src: 'https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js',
      async: true,
    },
  ],
};
```

### `stylesheets` {#stylesheets}

需要加载的 CSS 源数组。值可以是字符串或属性-值映射的普通对象。`<link>` 标签将被插入到 HTML `<head>` 中。如果使用对象，唯一必需的属性是 `href`，其他任何属性都是允许的（每个属性应为布尔值/字符串值）。

- 类型: `(string | Object)[]`

示例:

```js title="docusaurus.config.js"
export default {
  stylesheets: [
    // String format.
    'https://docusaurus.io/style.css',
    // Object format.
    {
      href: 'http://mydomain.com/style.css',
    },
  ],
};
```

:::info

默认情况下，`<link>` 标签会带有 `rel="stylesheet"`，但你可以显式添加自定义 `rel` 值来注入任何类型的 `<link>` 标签，不一定是样式表。

:::

### `clientModules` {#clientModules}

需要在站点全局加载的[客户端模块](../advanced/client.mdx#client-modules)数组。

示例:

```js title="docusaurus.config.js"
export default {
  clientModules: ['./mySiteGlobalJs.js', './mySiteGlobalCss.css'],
};
```

### `ssrTemplate` {#ssrTemplate}

使用 [Eta 语法](https://eta.js.org/docs/syntax#syntax-overview)编写的 HTML 模板，用于渲染你的应用。可用于设置 `body` 标签的自定义属性、额外的 `meta` 标签、自定义 `viewport` 等。请注意 Docusaurus 依赖模板的正确结构才能正常运行，一旦自定义模板，你需要确保模板符合上游要求。

- 类型: `string`

示例:

```js title="docusaurus.config.js"
export default {
  ssrTemplate: `<!DOCTYPE html>
<html <%~ it.htmlAttributes %>>
  <head>
    <meta charset="UTF-8">
    <meta name="generator" content="Docusaurus v<%= it.version %>">
    <% it.metaAttributes.forEach((metaAttribute) => { %>
      <%~ metaAttribute %>
    <% }); %>
    <%~ it.headTags %>
    <% it.stylesheets.forEach((stylesheet) => { %>
      <link rel="stylesheet" href="<%= it.baseUrl %><%= stylesheet %>" />
    <% }); %>
    <% it.scripts.forEach((script) => { %>
      <link rel="preload" href="<%= it.baseUrl %><%= script %>" as="script">
    <% }); %>
  </head>
  <body <%~ it.bodyAttributes %>>
    <%~ it.preBodyTags %>
    <div id="__docusaurus">
      <%~ it.appHtml %>
    </div>
    <% it.scripts.forEach((script) => { %>
      <script src="<%= it.baseUrl %><%= script %>"></script>
    <% }); %>
    <%~ it.postBodyTags %>
  </body>
</html>`,
};
```

### `titleDelimiter` {#titleDelimiter}

- 类型: `string`

将用作生成的 `<title>` 标签中的标题分隔符。

示例:

```js title="docusaurus.config.js"
export default {
  titleDelimiter: '🦖', // Defaults to `|`
};
```

### `baseUrlIssueBanner` {#baseUrlIssueBanner}

- 类型: `boolean`

启用后，当站点无法加载 CSS 或 JavaScript 文件时会显示横幅（这是非常常见的问题，通常与站点配置中错误的 `baseUrl` 有关）。

示例:

```js title="docusaurus.config.js"
export default {
  baseUrlIssueBanner: true, // Defaults to `true`
};
```

![一个基础的 URL 问题横幅示例。由于样式表加载失败，样式非常原始。文字显示"您的 Docusaurus 站点未能正确加载...当前配置的 baseUrl = / (默认值)；建议尝试 baseUrl = /build/"](/img/baseUrlIssueBanner.png)

:::warning

该横幅需要内联 CSS/JS，以防由于错误的 base URL 导致所有资源加载失败。

如果你有严格的[内容安全策略](https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP)，应该禁用此功能。

:::